--- a/api/server/model-config.json
+++ b/api/server/model-config.json
@@ -14,7 +14,8 @@
     ]
   },
   "User": {
-    "dataSource": "db"
+    "dataSource": "db",
+    "public": false
   },
   "AccessToken": {
     "dataSource": "db",
@@ -31,5 +32,9 @@
   "Role": {
     "dataSource": "db",
     "public": false
+  },
+  "authors": {
+    "dataSource": "mongodb",
+    "public": true
   }
 }
