--- a/package.json
+++ b/package.json
@@ -6,14 +6,67 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular-bootstrap": "^0.12.2",
+    "angular-sanitize": "^1.4.7",
     "body-parser": "~1.12.4",
     "bootstrap": "^3.3.5",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
-    "gulp-pipemin": "^2.2.4",
+    "express-node_modules": "^0.2.0",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1"
+  },
+  "devDependencies": {
+    "angular": "^1.3.15",
+    "angular-mocks": "^1.3.15",
+    "angular-ui-router": "^0.2.13",
+    "babel-core": "^5.8.25",
+    "babelify": "^6.3.0",
+    "brfs": "^1.2.0",
+    "browser-sync": "^2.7.6",
+    "browserify": "^11.2.0",
+    "browserify-istanbul": "^0.2.0",
+    "browserify-ngannotate": "^1.0.1",
+    "bulk-require": "^0.2.1",
+    "bulkify": "^1.1.1",
+    "debowerify": "^1.3.1",
+    "del": "^0.1.3",
+    "gulp": "^3.8.8",
+    "gulp-angular-templatecache": "^1.3.0",
+    "gulp-autoprefixer": "^2.0.0",
+    "gulp-changed": "^1.0.0",
+    "gulp-gzip": "^0.0.8",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^1.1.0",
+    "gulp-jshint": "^1.8.3",
+    "gulp-karma": "0.0.4",
+    "gulp-notify": "^2.0.0",
+    "gulp-protractor": "^1.0.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "0.0.5",
+    "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.1",
+    "imagemin-pngcrush": "^0.1.0",
+    "isparta": "^3.0.3",
+    "jshint-stylish": "^1.0.0",
+    "karma": "^0.12.21",
+    "karma-babel-preprocessor": "^4.0.1",
+    "karma-browserify": "^4.0.0",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-coverage": "git://github.com/douglasduteil/karma-coverage#next",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.3.6",
+    "pretty-hrtime": "^0.2.2",
+    "protractor": "^2.5.1",
+    "run-sequence": "^0.3.6",
+    "tiny-lr": "0.0.9",
+    "uglifyify": "^2.5.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^0.1.1",
+    "watchify": "^3.4.0"
   }
 }
