--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-imagemin": "^1.1.0",
     "gulp-jshint": "^1.8.3",
     "gulp-karma": "0.0.4",
+    "gulp-nodemon": "^2.0.4",
     "gulp-notify": "^2.0.0",
     "gulp-protractor": "^1.0.0",
     "gulp-rename": "^1.2.0",
