--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "angular": "^1.3.15",
     "angular-mocks": "^1.3.15",
     "angular-ui-router": "^0.2.13",
-    "babel-core": "^5.8.25",
+    "babel": "^6.0.15",
+    "babel-core": "^6.1.2",
     "babelify": "^6.3.0",
     "brfs": "^1.2.0",
     "browser-sync": "^2.7.6",
@@ -35,19 +36,19 @@
     "gulp-autoprefixer": "^2.0.0",
     "gulp-changed": "^1.0.0",
     "gulp-gzip": "^0.0.8",
-    "gulp-if": "^1.2.5",
+    "gulp-if": "^2.0.0",
     "gulp-imagemin": "^1.1.0",
     "gulp-jshint": "^1.8.3",
     "gulp-karma": "0.0.4",
     "gulp-nodemon": "^2.0.4",
-    "gulp-notify": "^2.0.0",
+    "gulp-notify": "^2.2.0",
     "gulp-protractor": "^1.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.4.2",
-    "gulp-util": "^3.0.1",
+    "gulp-util": "^3.0.7",
     "imagemin-pngcrush": "^0.1.0",
     "isparta": "^3.0.3",
     "jshint-stylish": "^1.0.0",
@@ -58,7 +59,7 @@
     "karma-coverage": "git://github.com/douglasduteil/karma-coverage#next",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.3.6",
-    "pretty-hrtime": "^0.2.2",
+    "pretty-hrtime": "^1.0.1",
     "protractor": "^2.5.1",
     "run-sequence": "^0.3.6",
     "tiny-lr": "0.0.9",
