--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "browser-sync": "^2.9.11",
     "express-node_modules": "^0.2.0",
-    "gulp-nodemon": "^2.0.4"
+    "gulp-nodemon": "^2.0.4",
+    "karma": "^0.13.15",
+    "mocha": "^2.3.3"
   }
 }
