--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "gulp-nodemon": "^2.0.4",
     "karma": "^0.13.15",
     "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "should": "^7.1.1",
+    "supertest": "^1.1.0"
   }
 }
