--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "express-node_modules": "^0.2.0",
     "gulp-nodemon": "^2.0.4",
     "karma": "^0.13.15",
-    "mocha": "^2.3.3"
     "mocha": "^2.3.3",
     "should": "^7.1.1",
-    "supertest": "^1.1.0"
+    "supertest": "^1.1.0",
+    "winston": "^2.1.0"
   }
 }
