--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.2",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "node node_modules/karma/bin/karma start karma.conf.js"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
@@ -21,7 +22,13 @@
     "express-node_modules": "^0.2.0",
     "gulp-nodemon": "^2.0.4",
     "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-ie-launcher": "^0.2.0",
+    "karma-mocha": "^0.2.0",
+    "karma-requirejs": "^0.2.2",
     "mocha": "^2.3.3",
+    "requirejs": "^2.1.20",
     "should": "^7.1.1",
     "supertest": "^1.1.0",
     "winston": "^2.1.0"
