--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.12.4",
     "gulp-pipemin": "^2.2.4",
     "jade": "~1.9.2",
+    "karma-should": "^1.0.0",
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1"
   },
@@ -27,9 +28,11 @@
     "karma-ie-launcher": "^0.2.0",
     "karma-mocha": "^0.2.0",
     "karma-requirejs": "^0.2.2",
+    "karma-should": "^1.0.0",
     "mocha": "^2.3.3",
     "requirejs": "^2.1.20",
     "should": "^7.1.1",
+    "sinon": "^1.17.2",
     "supertest": "^1.1.0",
     "winston": "^2.1.0"
   }
