--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "generator",
+  "email": "tbrantleyii@gmail.com",
+  "url": "nolongeraverage.net",
   "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "test": "node node_modules/karma/bin/karma start karma.conf.js"
   },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/theCompanyDream/nolongerAverage.net.git"
+    }
+  ],
   "dependencies": {
     "body-parser": "~1.12.4",
     "bootstrap": "^3.3.5",
