--- a/drupal/etc/nginx.conf
+++ b/drupal/etc/nginx.conf
@@ -1,13 +1,13 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
+user nobody;
+worker_processes 5;
+# pid /run/nginx.pid;
 
 events {
   worker_connections 1024;
 }
 
 http {
-  include       /etc/nginx/mime.types;
+  include       mime.types;
   default_type  application/octet-stream;
   access_log  /var/log/nginx/access.log;
   charset   utf-8;
@@ -20,4 +20,8 @@ http {
   fastcgi_connect_timeout 300;
   fastcgi_send_timeout 300;
   fastcgi_read_timeout 300;
+  sendfile        on;
+
+  include /etc/nginx/sites-enabled/*;
 }
+daemon off;
