--- a/drupal/etc/supervisord.conf
+++ b/drupal/etc/supervisord.conf
@@ -1,5 +1,5 @@
 [unix_http_server]
-file=/tmp/supervisor.sock   ; (the path to the socket file)
+file=/dev/shm/supervisor.sock   ; (the path to the socket file)
 
 [supervisord]
 logfile=/tmp/supervisord.log ; (main log file;default $CWD/supervisord.log)
@@ -19,10 +19,10 @@ user=root		     ;
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
+serverurl=unix:///dev/shm/supervisor.sock ; use a unix:// URL  for a unix socket
 
-[program:php5-fpm]
-command = /usr/sbin/php5-fpm -c /etc/php5
+[program:php-fpm]
+command = /usr/bin/php-fpm -c /etc/php
 autostart=true
 autorestart=true
 priority=5
