Got drupal to show the correct page i suppose =\

--- a/drupal/etc/nginx.conf
+++ b/drupal/etc/nginx.conf
@@ -21,7 +21,7 @@ http {
   fastcgi_send_timeout 300;
   fastcgi_read_timeout 300;
   sendfile        on;
-
+  include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites-enabled/*;
 }
 daemon off;
